--- a/reshuk.css
+++ b/reshuk.css
@@ -1,54 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Rubik:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&family=Rubik:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&family=Rubik:ital,wght@1,500&family=Source+Serif+Pro:wght@300&display=swap');
 h1{
-	background: lightpink;
-	font-family: sans-serif;
-	font-weight: 400;
-	padding: 5px;
-	margin: 20px solid black;
-	
-
-}
- ul li{
-	padding: 5px;
-	text-decoration: none;
+	padding-right: 100px;
+	font-family:'Rubik' ;
 }
 h2{
-
-	font-family:sans-serif;
-	background: ;
-	color: yellowgreen;
-	margin-top: 10px;
-	margin: 10px solid black;
+	font-family: 'Josefin Sans';
+	padding-right: 100px;
+}
+h2 p{
+	font-size: 20px;
+}
+h2 img{
+	padding-top: 10px;
 }
 h3{
-	font-family:sans-serif;
-	background: yellowgreen;
-	color: black;
-	border: 30px solid yellowgreen;
-    
-
-
+	font-family: 'Josefin Sans';
+	padding-right: 100px;
+	font-size: 1.5em;
 }
 h4{
-	font-family: monospace;
-	background: black;
-	color: lightpink;
+	font-family: 'Josefin Sans';
+	padding-right: 100px;
+	font-size: 1.5em;
+	background-image: url(Contact.jpg) ;
+   
+}
+h4 a{
+	color: black ;
+	font-size: 10px;
+	text-decoration: none;
 
 }
-div img{
-	border: 5px solid lightpink;
-	border-radius: 5.5%;
+h5{
+	margin-bottom:2rem ;
+	;
+	background-repeat: no-repeat;
+	size: 1300px;
 }
-a{
-	text-decoration: none;
-	padding: 5.50px;
-	color: lightpink;
-	text-shadow: transparent;
+form{
+	display: flex;
+	flex-direction: column;
+	width: 25rem;
+	gap: 1rem;
+
 }
-Button{
-	align-content: center;
-	color: yellowgreen;
+input
+select
+textarea
+{
+     padding: 1.4 rem;
+     background: transparent;
+     border: 5px solid yellowgreen;
+
 }
-p{
-	color: yellowgreen;
-	font-family: monospace;
+textarea{
+	height: 6rem;
+	background: transparent;
+	font-family:'Josefin Sans' ;
+	font-size: 30px;
+
+}
+button{
+	width: 5rem;
+	padding: 1.rem;
+	cursor: pointer;
+	background: transparent;
+	font-size: 20px;
+	font-family: 'Josefin Sans';
+	color: black;
+}
+input{
+	background: transparent;
+	
+	font-family:'Josefin Sans' ;
+	font-size: 30px;
+}
+footer{
+	background: #5f8699;
+	font-size: 20px;
+	 font-family: 'Source Serif Pro';
+}
+footer a{
+	font-size: 20px;
+	 font-family: 'Source Serif Pro';
+	color: black;
 }
