--- a/reshuk.css
+++ b/reshuk.css
@@ -1,90 +1,181 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Rubik:ital,wght@1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&family=Rubik:ital,wght@1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&family=Rubik:ital,wght@1,500&family=Source+Serif+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@1,500&family=Josefin+Sans:wght@300;600&family=Poppins&family=Roboto&family=Rubik+Beastly&family=Rubik:wght@300&family=Smooch&display=swap');
+*{
+	font-family: 'Poppins' , 'Robot';
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	scroll-behavior: smooth;
+}
+li{
+	list-style: none;
+}
+.nav-menu a{
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+}
+.navbar{
+	min-height: 70px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 24px;
+	background-color: rgba(221, 215, 197, 0.918);
+	
+	
+}
+.nav-menu{
+	display: flex;
+	justify-content: space-between;
+	align-items: left;
+	gap: 90px;
+}
+
+.nav-link{
+	transition: 0.7s ease;
+}
+.nav-link:hover{
+	color: rgb(8, 230, 0);
+}
+.hamburger{
+	display: none;
+	cursor: pointer;
+}
+
+.bar{
+	display: block;
+	width: 25px;
+	height: 3px;
+	margin: 5px auto;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+	background-color: rgb(0, 0, 0);
+}
 h1{
-	padding-right: 100px;
-	font-family:'Rubik' ;
+	margin: auto;
+    text-align: center;
+	color: rgb(0, 0, 0);
+	position: absolute;
+	right: 0px;
+	width: 300px;
+	padding: 10px;
+	font-size: 30px;
+	padding-top: 200px;
+	padding-right: 40px;
 }
-h2{
-	font-family: 'Josefin Sans';
-	padding-right: 100px;
+.about{
+	text-align: center;
+	padding-top: 20px;
 }
-h2 p{
-	font-size: 20px;
+.images{
+		
+	margin-left: auto;
+	margin-right: auto;
+	width: 40%;
+	
 }
-h2 img{
-	padding-top: 10px;
+.images img{
+	width: 80%;
+    flex: 33.33%;
+  padding: 5px;
+  border-radius: 13px;
+  
+ 
 }
-h3{
-	font-family: 'Josefin Sans';
-	padding-right: 100px;
-	font-size: 1.5em;
+.contain{
+	margin: auto;
+	width: 50%;
+	
+	padding: 10px;
 }
-h4{
-	font-family: 'Josefin Sans';
-	padding-right: 100px;
-	font-size: 1.5em;
-	background-image: url(Contact.jpg) ;
-   
+.contain a{
+	text-decoration: none;
+	color: rgb(238, 232, 232);
+	background-color: rgb(23, 89, 133);
+	font-size: 30px;
+	border-radius: 5px;
 }
-h4 a{
-	color: black ;
-	font-size: 10px;
+.con a{
+	text-align: center;
+	color: black;
 	text-decoration: none;
 
 }
-h5{
-	margin-bottom:2rem ;
-	;
-	background-repeat: no-repeat;
-	size: 1300px;
-}
-form{
-	display: flex;
-	flex-direction: column;
-	width: 25rem;
-	gap: 1rem;
-
-}
-input
-select
-textarea
-{
-     padding: 1.4 rem;
-     background: transparent;
-     border: 5px solid yellowgreen;
-
-}
-textarea{
+.con{
+	margin: auto;
+	width: 50%;
 	
-	height: 6rem;
-	background: transparent;
-	font-family:'Josefin Sans' ;
-	font-size: 30px;
-
-}
-button{
-	width: 5rem;
-	padding: 1.rem;
-	cursor: pointer;
-	background: transparent;
-	font-size: 20px;
-	font-family: 'Josefin Sans';
-	color: black;
-}
-input{
-	background: transparent;
-	
-	font-family:'Josefin Sans' ;
-	font-size: 30px;
+	padding: 10px;
+  
 }
 footer{
-	background: #5f8699;
-	font-size: 20px;
-	 font-family: 'Source Serif Pro';
+	background-color: rgb(192 194 203);;
+	height: 4vh;
+	color: rgb(0, 0, 0);
+	text-align: center;
 }
-footer a{
-	font-size: 20px;
-	 font-family: 'Source Serif Pro';
-	color: black;
+footer i{
+	color: #000;
+}
+.intro{
+	background-image: url(guy.jpg);
+	background-repeat: no-repeat;
+  
+  background-size: 100% 100%;
+ height: 100vh;
+}
+
+@media(max-width:1000px){
+	.hamburger{
+		display: block;
+	}
+	.hamburger.active .bar:nth-child(2){
+		opacity: 0;
+	}
+	.hamburger.active .bar:nth-child(1){
+		transform: translateY(8px) rotate(35deg);
+	}
+	.hamburger.active .bar:nth-child(3){
+		transform: translateY(-8px) rotate(-35deg);
+	}
+	.nav-menu{
+		position: fixed;
+		left: -100%;
+		top: 70px;
+		gap: 0;
+		flex-direction: column;
+		background-color:rgba(221, 215, 197, 0.918);
+		width: 100%;
+		color: rgb(243, 239, 239);
+		text-align: center;
+		transition: 0.3s;
+		font-size: 20px;
+	}
+	.nav-items{
+		margin: 16px 0;
+	}
+	.nav-menu.active{
+		left: 0;
+	}
+	.intro img{
+		width: 25%;
+		  
+	  }
+	  .images{
+		display: block;
+	margin-left: auto;
+	margin-right: auto;
+	
+	
+}
+.images img{
+	width: 150%;
+    flex: 33.33%;
+  padding: 5px;
+  border-radius: 15px;
+
+}
+h2{
+	font-size: 10px;
+}
+
 }
